# cough-classification

./: .gitignore  1.Get Codes from CSEE GITLAB.ipynb  README.md  app.py  main.py  pyproject.toml  setup.sh
cough_segmentation/components/: data_ingestion.py  data_transformation.py  model_trainer.py
cough_segmentation/constants/: __init__.py
cough_segmentation/entity/: artifact_entity.py  config_entity.py
cough_segmentation/exception/: __init__.py
cough_segmentation/logger/: __init__.py
cough_segmentation/ml/: model.py
cough_segmentation/pipeline/: __init__.py  prediction_pipeline.py  train_pipeline.py
cough_segmentation/utils/: framing.py  utils.py
notebooks/: 001_Dataset_Preprocessing.ipynb  001_Dataset_Preprocessing_Testing.ipynb  002_Feature_extraction_spectogram.ipynb  002_Feature_extraction_spectrogram.ipynb  002_Feature_extraction_template.ipynb  003_Cross_validation_split.ipynb  004_Gammastone12345.ipynb  004_Gammatone.ipynb  004_Testing_FE_zero_cross_rate.ipynb  004_Training_ML_Time_and_Freq_Domain_Features.ipynb  004_Training_NN_CNN_Mel_Spectogram.ipynb  004_Training_NN_CNN_Spectrogram.ipynb  004_Training_RMS_ML_Models.ipynb  004_Training_Zero_Cross_Rate.ipynb  004_Training_template.ipynb  004_gamma.ipynb  005_Get_Test_Dataset.ipynb  01_exploring_data.ipynb  02_MFCC.ipynb  02_feature_extraction_ransford_updated-2.ipynb  FE_zero_cross_rate.ipynb  FE_zero_cross_rate_V2.ipynb  Feature_extraction_mel_spectrogram.ipynb
tests/: test_app.py
