[tool.poetry]
name = "cough-segmentation"
packages = [{ include = "cough_segmentation"}]
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
tensorflow= "2.10"
tensorflow-io-gcs-filesystem = {version = "0.27.0", python = ">=3.7,<3.12"}
scikit-learn = "^1.5.0"
seaborn = "^0.13.2"
librosa = "^0.10.2.post1"
imblearn = "^0.0"
py7zr = "^0.21.0"
xgboost = "^2.0.3"
lightgbm = "^4.4.0"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
